--- a/Properties/launchSettings.json
+++ b/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "todo": {
       "commandName": "Project",
-      "commandLineArgs": "-add "
+      "commandLineArgs": "-add -due \"02/03/04\""
     }
   }
 }
